tests/should_fail/terminates/recursion_through_call.stderr
error: called program function `std::ops::Fn::call` in program (terminates) context
  --> recursion_through_call.rs:14:8
   |
14 |     fp.call(());
   |        ^^^^

error: Mutually recursive functions: when calling `g`...
  --> recursion_through_call.rs:12:1
   |
12 | pub fn g() {
   | ^^^^^^^^^^
   |
note: `g` uses `f`...
  --> recursion_through_call.rs:13:20
   |
13 |     let fp: fn() = f;
   |                    ^
note: finally `f` calls `g`.
  --> recursion_through_call.rs:8:5
   |
 8 |     g();
   |     ^

error: aborting due to 2 previous errors

